deploy/k8s/overlays/prod/web-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: li3d-web
spec:
  replicas: 3
